pedido - ajuste cria
